src/objects/Litigation_Transaction__c.object
<CustomObject>
    <description>Litigation Payments for Litigation</description>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Submitted</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Payment Description</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Invoiced_Amount__c</fullName>
        <label>Invoiced Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Litigation__c</fullName>
        <label>Litigation</label>
        <referenceTo>Litigation__c</referenceTo>
        <relationshipLabel>Litigation Transactions</relationshipLabel>
        <relationshipName>Litigation_Transactions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Payee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payee</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Litigation Transactions</relationshipLabel>
        <relationshipName>Litigation_Transaction_Payees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Date__c</fullName>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Settlement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Litigation Expense</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reserve_Amount__c</fullName>
        <label>Reserve Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reserve_Date__c</fullName>
        <label>Reserve Date</label>
        <type>Date</type>
    </fields>
    <label>Litigation Transaction</label>
    <nameField>
        <label>Litigation Payee</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Litigation Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>